# PyTPO

./: Test.py  bugs.todo  install.sh  main.py  pyproject.toml  pytpo.py  ruff.toml  terminal_app_main.py  text_editor_main.py
DL_Manager/: main.py
IDE_DEBUGGER_TEST/: debugger_backend.py  debugger_controller.py  debugger_editor.py  debugger_editor_manager.py  debugger_session.py  debugger_session_context.py  debugger_widget.py  debugger_widget_test_bed.py
Proof_of_concepts/: docmenu.py  media_control_poc.py  python_text-cli-test.py  shimmer_test.py  shimmer_test_border.py  test-cli-prompt-editor-gemini.py  workspaces.py  workspaces2.py
Terminal/: __init__.py  app.py  integration.py  main_window.py  paths.py  prompt-editor.py  settings.py  settings_dialog.py  theme_manager.py  workspace.py
barley_ide/: AGENTS.md  app.py  app_launch_monitor.py  desktop_entries.py  desktop_integration.py  file_dialog_settings.py  settings_manager.py  settings_models.py  settings_store.py
docs/: README.md  getting-started.md  screenshot-shotlist.txt  troubleshooting.md
icons/: env.xcf
pytpo/: __init__.py  app.py  desktop_entries.py  file_dialog_settings.py  instance_coordinator.py  settings_manager.py  settings_models.py  settings_store.py
pytpo-session-workbench/: app.py  install_file_helper.py
pytpo_appgrid/: app.py  desktop_apps.py  main_window.py  settings.py  settings_dialog.py  storage_paths.py  styled_panel.py  theme.py
pytpo_dock/: AGENTS.md  app.py  apps.py  autostart.py  debug.py  match_diagnostics.py  settings_dialog.py  storage_paths.py  window_matching.py  x11_dock_window.py  x11_window_preview.py  xlib_window_source.py
pytpo_terminal/: app.py  instance_coordinator.py  session.py  settings.py  settings_dialog.py  theme_manager.py
pytpo_text_editor/: __init__.py  app.py  desktop_integration.py  main_window.py  recent_files.py  settings_dialog.py  storage_paths.py  theme_manager.py  workspace.py
scripts/: icongen.py  install_text_editor.sh  uninstall_text_editor.sh
src/: file_dialog_settings.py  settings_manager.py  settings_models.py  settings_store.py  storage_paths.py
tdock/: .tdocproject  TDOC.md  __init__.py  index.tdoc  tdoc_app.py
tests/: test_asset_paths.py  test_chat_markdown_bubble.py  test_code_editor_folding.py  test_completion_manager.py  test_debugger_integration.py  test_desktop_entries.py  test_desktop_session_highlighting.py  test_dynamic_completion_fallback.py  test_editor_workspace_drag.py  test_execution_controller.py  test_explorer_controller.py  test_file_system_tree.py  test_git_clone_service.py  test_image_viewer.py  test_lint_manager.py  test_occurrence_highlighting.py  test_project_policy_service.py  test_python_import_quick_fixes.py  test_pytpo_appgrid_app.py  test_pytpo_appgrid_cli.py  test_pytpo_appgrid_settings.py  test_pytpo_appgrid_theme.py  test_pytpo_dock_app.py  test_pytpo_dock_autostart.py  test_pytpo_dock_debug.py  test_pytpo_dock_window_matching.py  test_pytpo_dock_window_preview.py  test_pytpo_dock_x11_dock_window.py  test_terminal_alt_screen.py  test_terminal_widget_reflow.py  test_theme_controller.py  test_topbar_appearance.py  test_topbar_notifications.py  test_topbar_settings.py  test_topbar_system_menu.py  test_topbar_ui.py  test_topbar_x11_topbar_window.py  test_tpo_appgrid_desktop_apps.py  test_tray_discovery.py  test_workspace_controller.py
text_editor/: __init__.py  desktop_integration.py  desktop_integration_dialog.py  instance_coordinator.py  main_window.py  recent_files.py  theme_manager.py  workspace.py
themes/: Copper Harbor.qsst  Default.qsst
topbar/: app.py  appearance.py  calendar_popup.py  constants.py  dbus.py  focus.py  log_utils.py  notifications copy.py  notifications.py  settings.py  tray.py  ui.py  (+3 more)
(+519 files in other folders)
