[project]
name = "pytpo"
version = "0.1.3"
description = "A simple custom IDE."
requires-python = ">=3.11"
dependencies = [
    "pyside6",
    "pyte",
    "ruff",
    "pyflakes",
    "debugpy",
    "jedi",
    "markdown",
    "pygments",
    "pymdown-extensions",
    "pyspellchecker",
]

[project.scripts]
pytpo = "pytpo.app:main"
pytpo-terminal = "pytpo_terminal.app:main"
pytpo-text-editor = "pytpo_text_editor.app:main"
pytpo-dock = "pytpo_dock.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "pytpo*",
    "TPOPyside*",
    "pytpo_terminal*",
    "pytpo_text_editor*",
    "pytpo_dock*",
    "tdock*",
]
exclude = ["tests*", "test_projects*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
