[project]
name = "pytpo"
version = "0.1.3"
description = "A simple custom IDE."
requires-python = ">=3.11"
dependencies = [
    "pyside6",
    "xcffib",
    "python-xlib",
    "pyte",
    "ruff",
    "pyflakes",
    "debugpy",
    "jedi",
    "markdown",
    "pygments",
    "pymdown-extensions",
    "pyspellchecker",
]

[project.scripts]
pytpo = "pytpo.app:main"
pytpo-desktop-integration = "pytpo.desktop_entries:main"
pytpo-terminal = "pytpo_terminal.app:main"
pytpo-text-editor = "pytpo_text_editor.app:main"
pytpo-dock = "pytpo_dock.app:main"
pytpo-appgrid = "pytpo_appgrid.app:main"
pytpo-topbar = "topbar.app:main"

[tool.setuptools.package-data]
pytpo = ["icon.png"]
pytpo_terminal = ["icon.png"]
pytpo_text_editor = ["icon.png"]
pytpo_dock = ["icon.png"]
pytpo_appgrid = ["icon.png"]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "pytpo*",
    "TPOPyside*",
    "pytpo_terminal*",
    "pytpo_text_editor*",
    "pytpo_dock*",
    "pytpo_appgrid*",
    "tdock*",
    "topbar*",
]
exclude = ["tests*", "test_projects*"]

[tool.setuptools.data-files]
"share/pytpo/icons" = [
    "icons/*.png",
]
"share/pytpo/themes" = [
    "themes/*.qss",
    "themes/*.qsst",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
