[project]
name = "barley_ide"
version = "0.1.3"
description = "Barley IDE."
requires-python = ">=3.11"
dependencies = [
    "pyside6",
    "xcffib",
    "python-xlib",
    "pyte",
    "ruff",
    "pyflakes",
    "debugpy",
    "jedi",
    "markdown",
    "pygments",
    "pymdown-extensions",
    "pyspellchecker",
    "tpo-assets @ git+https://github.com/TPO-Code/tpoassets.git@v0.1.3",
]

[project.scripts]
barley-ide = "barley_ide.app:main"
barley-ide-desktop-integration = "barley_ide.desktop_integration:main"
stout = "stout.app:main"
stout-terminal = "stout.app:main"
stout-desktop-integration = "stout.desktop_integration:main"
pytpo-text-editor = "pytpo_text_editor.app:main"
pytpo-text-editor-desktop-integration = "pytpo_text_editor.desktop_integration:main"
pytpo-dock = "pytpo_dock.app:main"
pytpo-dock-desktop-integration = "pytpo_dock.desktop_integration:main"
grist = "grist.app:main"
grist-desktop-integration = "grist.desktop_integration:main"
brim = "brim.app:main"

[tool.setuptools.package-data]
TPOPyside = [
    "assets/icons/*",
    "assets/themes/*",
]
barley_ide = ["icon.png"]
stout = ["icon.png"]
pytpo_text_editor = ["icon.png"]
pytpo_dock = ["icon.png"]
grist = ["icon.png"]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "barley_ide*",
    "TPOPyside*",
    "stout*",
    "pytpo_text_editor*",
    "pytpo_dock*",
    "grist*",
    "tdock*",
    "brim*",
]
exclude = ["tests*", "test_projects*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
